# Abraxas

./: .env.example  .gitignore  .replit  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFLICT_RESOLUTION_GUIDE.md  DEPLOYMENT_SCO.md  INTEGRATION_SCO.md  Makefile  PLANS.md  PR_DESCRIPTION.md  QUICKSTART_API.md  README.md  README_KITE_PATCH.md  README_ORIN.md  README_SCO.md  ROADMAP.md  UNIVERSAL_TUNING_PLANE_V04_SUMMARY.md  abx_versions.json  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  sitecustomize.py  test_log.py  tsconfig.canonical.json  tsconfig.json  vitest.config.ts  yaml.py
.aal/: dependency_manifest.v0.yaml  dependency_surface_policy.v0.yaml  expected_subsystems.v1.yaml  notion_repo_map.v1.yaml  policy.json  readiness_policy.v1.yaml  subsystem_registry.v1.yaml
.abraxas/: ANALYSIS_KERNEL_PROMPTS.md  ARCHITECTURE_ANALYSIS.md  PHASE2_DECOMPOSITION.md  PHASE3_PIPELINES.md  PHASE4_ERS.md  PHASE5_GOLDEN_TESTS.md  PHASE6_PERFORMANCE.md  PHASE6_WEATHER_ENGINE.md  TRANSFORMATION_SUMMARY.md  UPDATE_SUMMARY.md  canon_state.v0.yaml  core.yaml  implementation_policy.md  provenance.yaml  registry.json  schedules.yaml
.github/: AI_ASSISTANT_GUIDE.md  CHATGPT_README.md  QUICK_REFERENCE.md  pull_request_template.md
aal-ui-kit/: README.md  package.json
aal_core/: __init__.py
aal_viz/: __init__.py
abraxas/: __init__.py  fn_exports.py  grim_bridge.py  plugin.py
abraxas_ase/: __init__.py  anomaly.py  candidates.py  chronoscope.py  cli.py  engine.py  export_pack.py  hysteresis.py  io.py  keyed.py  lanes.py  leakage_linter.py  lexicon.py  lexicon_generated.py  lexicon_manifest.json  lexicon_runtime.py  lps.py  normalize.py  provenance.py  sas.py  schema.py  scoring.py  stabilization.py  tiering.py  types.py  watchlist.py
abx/: __init__.py  a2_phase.py  a2_registry.py  aalmanac.py  aalmanac_enrich.py  aalmanac_tau.py  acquisition_execute.py  acquisition_plan.py  acquisition_planner.py  anchor_ledger.py  anchor_url_resolver.py  apply_cli.py  attribution_compile.py  attribution_delta.py  backfill_14d.py  backfill_run.py  bootstrap.py  calibration.py  canon_checks.py  canon_diff.py  capabilities.py  claim_timeseries.py  claims_run.py  cli.py  closure_summary.py  confidence_bands.py  continuity.py  contracts.py  coupling_audit.py  cycle_runner.py  daily_run.py  dap.py  delta_scoring.py  developer_readiness.py  doctor.py  dossier_index.py  due_outcomes.py  epp.py  error_attrib_tasks.py  ers_scheduler.py  (+129 more)
abx_familiar/: __init__.py
attached_assets/: Pasted--FINAL-CHUNK-config-preview-feature-1-server-index-js-add-a-api-config-preview--1758766437583_1758766437583.txt  Pasted--MYSTICAL-INDICATORS-CHUNK-Add-overwrite-these-entr-1758768020466_1758768020466.txt  Pasted--NEXT-CHUNK-add-overwrite-these-entries-in-the-files-object-1-Root-gitignore-fi-1758752741721_1758752741721.txt  Pasted--NEXT-CHUNK-add-overwrite-these-entries-in-the-files-object-1-Root-package-json--1758752561545_1758752561545.txt  Pasted--NEXT-CHUNK-add-overwrite-these-entries-in-the-files-object-1-server-db-js-add-1758765622720_1758765622721.txt  Pasted--bootstrap-js-Run-once-node-bootstrap-js-Writes-the-entire-Abraxas-project-into-abraxas-a-1758751275714_1758751275715.txt
config/: oracle_daily.json
core/: __init__.py
data/: aAlmanac.jsonl  governance.jsonl  oracle_runs_sample.jsonl  promotion_receipt_actuator_apply.json  promotion_receipt_compression_detect.json  promotion_receipt_infra_self_heal.json  promotion_receipt_weather_generate.json  rune_invocations.jsonl
default_rules/: watchlist_rules.enterprise.json
docs/: ABRAXAS_KERNEL_CONTRACT.md  AUDIT_REPORT_SCHEMA.json  CANONICAL_RUNTIME.md  CAP_GOLDEN_STATE.md  EMERGENT_METRICS.md  ERS_v0.1.md  MERGE_CONFLICT_ANALYSIS.md  OPERATOR_FAMILY_NAMING_LAW_v0_1.md  ORACLE_SIGNAL_LAYER_V2_DROP.md  README.md  RELEASE_READINESS.md  SLANG-HIST.v1.md  SUBSYSTEM_INVENTORY.md  VALIDATION_AND_ATTESTATION.md  branch_consolidation.md  coding_chunks_plan_2026-03-27.md  notion_execution_plan_2026-03-27.md  notion_scan_2026-03-27.md  openapi.yaml  operator_console_ui_v1.md  oracle_signal_layer_v2_invariance.md  oracle_signal_layer_v2_receipts.md  oracle_signal_layer_v2_runtime.md  overlay_contract.md  patch004_design_scaffold.md  patch004_scenario_engine.md  patch004_scenario_review_queue.md
examples/: README.md  deltas.json  emergent_metrics_example.py  generate_oracle_jsonl.py  neon_genie_integration.py  oracle_v2_example.py  perf_subsystem_demo.py  sco-integration-example.ts  shadow_detectors_integration.py  slang-engine-example.ts  tuning_plane_demo.py
infra/: actuator.py  health_probes.py  self_heal_advisory.py
lexicon_sources/: stopwords.txt  subwords_conflict.txt  subwords_core.txt  subwords_geo.txt
pydantic/: __init__.py
registry/: abx_rune_registry.json  metric_candidate.schema.json  metrics_candidate.json
scheduler/: steps.py
schema/: adaptive_state_capsule.json  adaptive_state_lifecycle_rules.md
schemas/: AALVizProofState.v1.schema.json  BrierScoringRun.v1.schema.json  CanaryActivationPacket.v1.schema.json  CanaryCandidateSet.v1.schema.json  CodeReviewInput.v1.json  CodeReviewOutput.v1.json  DeveloperReadinessProjection.v1.json  FindSkillsInput.v1.json  FindSkillsOutput.v1.json  ForecastOutcomeSet.v1.schema.json  GapClosureInvarianceProjection.v1.json  OracleInput.v1.schema.json  OracleSignalPacket.v1.schema.json  ase_input.schema.json  (+35 more)
tools/aatf/: CHANGELOG.md  README.md  pyproject.toml
tools/aatf/aatf/: __init__.py  api.py  cli.py  config.py  provenance.py  storage.py
tools/aatf/aatf/export/: __init__.py  aalmanac.py  bundle.py  memetic_weather.py  neon_genie.py  rune_proposals.py
tools/aatf/aatf/ingest/: __init__.py  canonicalize.py  chunking.py  loaders.py
tools/aatf/aatf/queue/: __init__.py  models.py  review.py  states.py
tools/aatf/aatf/schemas/: aalmanac.v0.json  export_bundle.v0.json  memetic_weather.v0.json  neon_genie.v0.json  rune_proposal.v0.json
tools/aatf/aatf/tests/: conftest.py  test_determinism.py  test_missing_inputs.py  test_schema_validation.py
tools/aatf/aatf/tests/golden/: README.md
(+4524 files in other folders)
