[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abraxas"
version = "1.5.0"
description = "Abraxas - Deterministic Symbolic Intelligence with Predictive Forecasting"
readme = "README_ORIN.md"
requires-python = ">=3.8"
authors = [
    {name = "Abraxas Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Core dependencies
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "jsonschema>=4.22.0",
    "rich>=13.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "numpy>=1.24.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
# Server dependencies (FastAPI for full features)
server = [
    "fastapi>=0.110.0",
    "jinja2>=3.1.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "argon2-cffi>=23.1.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "sentence-transformers>=2.2.0",
    "websockets>=12.0",
]

lens = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

# PostgreSQL support
postgres = [
    "psycopg2-binary>=2.9.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "jsonschema>=4.22.0",
]

# Full installation (server + dev)
full = [
    "abraxas[server,dev]",
]

[project.scripts]
# CLI entry points
abx = "abx.cli:main"
abraxas = "abraxas.cli.main:main"
abraxas-ase = "abraxas_ase.cli:main"
abraxas-oracle = "abraxas.oracle.cli:main"

[project.entry-points."abx.plugins"]
abraxas = "abraxas.plugin:register"

[tool.setuptools]
packages = ["abraxas", "abraxas.cli", "abraxas.kernel", "abraxas.linguistic",
            "abraxas.operators", "abraxas.overlay", "abraxas.pipelines",
            "abraxas.storage", "abraxas.core", "abraxas.decodo", "abraxas.slang",
            "abraxas.slang.operators", "abraxas.oasis", "abraxas.policy", "abraxas.drift",
            "abraxas.disinfo",
            "abraxas.renderers", "abraxas.renderers.resonance_narratives",
            "abraxas.schema", "abraxas.schemas", "abraxas.seeds", "abraxas.sources", "abraxas.sources.adapters",
            "abraxas.temporal", "abraxas.metric_extractors", "abraxas.influence",
            "abraxas.synchronicity", "abraxas.tvm", "abraxas.linguistics",
            "abraxas.economics", "abraxas.governance", "abraxas.lens",
            "abraxas.modules", "abraxas.modules.gtx", "abraxas.modules.gtx.sim",
            "abraxas.oracle", "abraxas.lexicon", "abraxas.events", "abraxas.api",
            "abraxas.mda",
            "abx", "abx.util", "abx.runtime", "abx.assets",
            "abx.overlays", "abx.core", "abx.server", "abx.ingest",
            "abraxas.io", "abraxas.web", "abraxas.render",
            "abraxas.kernel.v2", "abraxas.overlays",
            "abraxas_ase", "abraxas_ase.tools",
            "abx_familiar", "abx_familiar.ir"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["abraxas", "abx", "abx_familiar"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
